[gd_scene load_steps=4 format=2]

[ext_resource path="res://codigos/movimiento personaje V2 .gd" type="Script" id=1]
[ext_resource path="res://sonidos/correr/pl_tile1.wav" type="AudioStream" id=2]

[sub_resource type="CapsuleShape" id=1]

margin = 0.04
radius = 25.0
height = 90.0

[node name="personaje" type="KinematicBody"]
transform = Transform( 0.95091, 0, -0.309464, 0, 1, 0, 0.309464, 0, 0.95091, 0, 0, 0 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
move_lock_x = false
move_lock_y = false
move_lock_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="cuerpo_escena_principal" type="CollisionShape" parent="."]
transform = Transform( -0.766037, 0, 2.77556e-017, 0, 3.34845e-008, 0.766037, 0, -0.766037, 3.34845e-008, 0.399963, -9.28597, -2.05103 )
shape = SubResource( 1 )
disabled = false

[node name="cabeza_escena_principal" type="Spatial" parent="." groups=[
"personaje",
]]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0.669861, 41.8427, -0.730103 )

[node name="camara_escena_principal" type="Camera" parent="cabeza_escena_principal"]
transform = Transform( 1, 0, -5.96046e-008, 0, 1, 0, 5.96046e-008, 0, 1, 0, 0.903493, 0 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 5000.0

[node name="StairCatcher" type="RayCast" parent="."]
transform = Transform( 30, 0.024077, -0.00316119, -0.0241108, 29.9981, -0.33548, 0.00289106, 0.33548, 29.9981, 0.38306, -42.187, -2.09027 )
enabled = true
exclude_parent = true
cast_to = Vector3( 0, 0, -1 )
collision_mask = 2
collide_with_areas = false
collide_with_bodies = true

[node name="sonidos_personaje" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="sonidos_personaje"]
stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

